# TactiClip

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  setup_builder.iss  setup_builder_template.iss  vite.config.ts
.github/ISSUE_TEMPLATE/: 🐞-bug-report.md  🚀-feature-request.md
src/: global.css  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  resizer.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard_api.rs  delete_item.rs  force_language.rs  manage_native_clipboard.rs  mod.rs  pin_item.rs  resize_window.rs  settings_api.rs  show_window.rs  toggle_window.rs  url_opener.rs
src-tauri/src/core/: app_handle.rs  database_api.rs  mod.rs
src-tauri/src/core/tasks/: clipboard_watcher.rs  hotkeys_listener.rs  mod.rs
src-tauri/src/structures/: clipboard_entry.rs  config.rs  mod.rs
src/components/: ActionRow.tsx  ClipboardHistory.tsx  ClipboardItem.tsx  Icon.tsx  greet.tsx
src/routes/: index.tsx  layout.tsx
src/routes/settings/: index.tsx
