[package]
name = "TactiClip"
version = "0.1.0"
description = "Lightweight and powerful clipboard manager"
authors = ["PetchouDev"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = ["tray-icon", "unstable"] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rusqlite = { version = "0.30", features = ["bundled"] }
directories = "4.0"
once_cell = "1.21.3"
device_query = "3.0.1"
tauri-plugin-clipboard = "2.1.11"
clipboard-rs = "0.2.4"
enigo = "0.3.0"
winapi = "0.3.9"
windows = {version = "0.61.1", features= ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
unicode-segmentation = "1.12.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-opener = "2"
regex = "1.11.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
